# TaurEAV

./: README.md  package-lock.json  package.json  setup.sql  vite.config.js
src/: App.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db_interface.rs  eav_structs.rs  main.rs
src/lib/: eavTable.jsx  entityContainer.jsx  entityData.jsx  entityTypeTabs.jsx  formModal.jsx  helpModal.jsx  menuBar.jsx  searchBar.jsx  valueRow.jsx
src/store/: eav.js  index.js
src/theme/: App.css
