[package]
name = "taureav"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-std = { version = "1.12.0", features = [ "attributes" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "mysql", "chrono" ] }
dotenvy = "0.15"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
